# poetry-ghactions

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
poetry_ghactions/: __init__.py
tests/: test_poetry_ghactions.py
